@@ -41,7 +41,7 @@ test = function(num,x,y,error=NULL,warning=NULL,output=NULL) {
     # 2) test() tests more deeply than a diff on console output and uses a data.table appropriate definition of "equals" different
     #    from all.equal and different to identical related to row.names and unused factor levels
     # 3) each test has a unique id which we refer to in commit messages, emails etc.
-    # print(paste0("running test #", num))
+    print(paste0("running test #", num))
     .lasttest <<- num
     ntest <<- ntest + 1
     lastnum <<- num
@@ -3656,6 +3656,10 @@ test(1166, x, rbind(x, NULL))
 foo = data.table(a=rep(c(0L,1L,0L,1L),2), b=rep(c(TRUE,TRUE,FALSE,FALSE),2), c=1L)
 test(1167, foo[, .N, by=list(b,a)], data.table(b=c(TRUE, TRUE, FALSE, FALSE), a=c(0L,1L,0L,1L), N=2L))
 
+# fix for bugs #5355 - rbindlist with factor columns and empty data.tables resulted in error.
+A <- data.table(x=factor(1), key='x')
+B <- data.table(x=factor(), key='x')
+test(1168, rbindlist(list(B,A)), data.table(x=factor(1)))
 
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
